the bot was fixed